--- a/zbackend-api/package.json
+++ b/zbackend-api/package.json
@@ -15,8 +15,9 @@
     "@truffle/contract": "^4.4.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "mongodb": "^4.2.2",
     "nodemon": "^2.0.15",
-    "web3": "^1.6.1"
+    "dotenv": "^16.0.0",
+    "mongoose": "^6.3.2",
+    "axios":"0.27.2"
   }
 }
