--- a/zbackend-api/package.json
+++ b/zbackend-api/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^2.0.15",
     "dotenv": "^16.0.0",
     "mongoose": "^6.3.2",
-    "axios":"0.27.2"
+    "axios":"0.27.2",
+    "ioredis":"^5.0.4"
   }
 }
