--- a/zbackend-api/package.json
+++ b/zbackend-api/package.json
@@ -13,12 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@truffle/contract": "^4.4.1",
+    "axios": "0.27.2",
     "cors": "^2.8.5",
-    "express": "^4.17.2",
-    "nodemon": "^2.0.15",
     "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "ioredis": "^5.0.4",
     "mongoose": "^6.3.2",
-    "axios":"0.27.2",
-    "ioredis":"^5.0.4"
+    "nodemon": "^2.0.15",
+    "redisscan": "^2.0.0"
   }
 }
